Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
Description
What I always loved on our mspaint, is that it does not rely on any MFC.
Its little dependencies is a big bonus.
But we should improve further by making it no longer relying on HHCTRL.OCX also:
mspaint_from_MS_XPSP3.PNG![]()
mspaint_from_ros_0.4.15-dev-5804-g75ac9f8.PNG![]()
Attachments
Issue Links
- relates to
-
CORE-18867 mspaint: Refactor and improve
-
- Resolved
-
-
CORE-8738 Clicking on Help Topics now Works in Paint
-
- Resolved
-