[MSPAINT] Unlink HHCTRL.OCX and use dynamic load (#5165)

Unlink HHCTRL.OCX by modifying CMakeLists.txt. Add DoHtmlHelpW helper function. CORE-18879, CORE-18867